--- a/MVVM-Ecommerce-FlutterApp-master/pubspec.yaml
+++ b/MVVM-Ecommerce-FlutterApp-master/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   firebase_core: ^1.6.0
   firebase_auth: ^3.1.1
   cloud_firestore: ^3.1.5
-  titled_navigation_bar: ^4.1.0
+  titled_navigation_bar: ^5.0.0-nullsafety.0
   animated_size_and_fade: ^3.0.0
   progress_state_button: ^1.0.4
   nanoid: ^1.0.0
