--- a/baru/pubspec.yaml
+++ b/baru/pubspec.yaml
@@ -34,11 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^1.0.0
+  provider: ^6.0.0
+  titled_navigation_bar: ^5.0.0-nullsafety.0
+  animated_size_and_fade: ^3.0.0
+  progress_state_button: ^1.0.4
+  nanoid: ^1.0.0
+  internet_connection_checker: ^0.0.1+3
+  intl: ^0.17.0
+  timelines: ^0.1.0
+  carousel_slider: ^4.0.0
+  shared_preferences: ^2.0.11
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_native_splash: ^1.3.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -46,6 +58,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
+flutter_native_splash:
+  color: "#ea4b4b"
+  image: assets/images/tshirt250.png
+  android: true
+  io: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -56,6 +73,35 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/icons/
+
+  fonts:
+    - family: Muli
+      fonts:
+        - asset: assets/fonts/muli/Muli.ttf
+        - asset: assets/fonts/muli/Muli-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/muli/Muli-Light.ttf
+          weight: 300
+
+    - family: PantonBold
+      fonts:
+        - asset: assets/fonts/panton/Panton-BlackCaps.otf
+
+    - family: PantonBoldItalic
+      fonts:
+        - asset: assets/fonts/panton/Panton-BlackitalicCaps.otf
+
+    - family: Panton
+      fonts:
+        - asset: assets/fonts/panton/Panton-LightCaps.otf
+
+    - family: PantonItalic
+      fonts:
+        - asset: assets/fonts/panton/Panton-LightitalicCaps.otf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
